lunar-basecamp/mdapi/lbo/objects/Safety_Certification__c.object
<CustomObject>
    <description>Safety certifications completed by explorers.</description>
    <label>Safety Certification</label>
    <nameField>
        <label>Safety Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Safety Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Explorer__c</fullName>
        <label>Explorer</label>
        <referenceTo>Lunar_Explorer__c</referenceTo>
        <relationshipLabel>Safety Certifications</relationshipLabel>
        <relationshipName>Safety_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Basic EVA</fullName><default>false</default><label>Basic EVA</label></value>
                <value><fullName>Crater Navigation</fullName><default>false</default><label>Crater Navigation</label></value>
                <value><fullName>Emergency Repair</fullName><default>false</default><label>Emergency Repair</label></value>
                <value><fullName>Low-G Climbing</fullName><default>false</default><label>Low-G Climbing</label></value>
                <value><fullName>Solar Radiation Protocol</fullName><default>false</default><label>Solar Radiation Protocol</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor_Name__c</fullName>
        <label>Instructor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pass_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Status</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>